# Lauzhack2017

./: NewAlgo.ipynb  Untitled.ipynb  bobst.ipynb  ideas.txt
SuperVisualization/: Makefile  README.md
SuperVisualization/brate/: Display.h  Element.h  Node.h  stringfix.h  txtresources.h
SuperVisualization/include/glad/: glad.h
SuperVisualization/src/: Display.cpp  Node.cpp  glad.cpp  lodepng.cpp  main.cpp  txtresources.cpp
cpp_code/: .CMakeLists.txt.swp  .main.cpp.swp  CMakeLists.txt  README.md  main.cpp  spike_in_incoming_transactions.cpp  spike_in_outgoing_transactions.cpp
cpp_code/cpp_code/: .main.cpp.swo  .money_deviations.cpp.swo  .money_deviations.cpp.swp  .spike_in_incoming_transactions.cpp.swp  .spike_in_outgoing_transactions.cpp.swp  CMakeLists.txt  main.cpp  money_deviations.cpp  sort_data.cpp  spike_in_incoming_transactions.cpp  spike_in_outgoing_transactions.cpp
cpp_code/cpp_code/big_data/: chunk_4_0.csv
cpp_code/cpp_code/data/: clients.small.csv
cpp_code/cpp_code/include/: .data_structures.hpp.swo  .data_structures.hpp.swp  data_structures.hpp
cpp_code/data/: .~lock.transactions.small.csv#
cpp_code/include/: data_structures.hpp
python_code/: environment.yml  least_squares.py  ml_learning.py
python_code/python_code/: environment.yml  graph_plotter.py  ml_learning.py  plot_possible_frauds.py  sort_csv.py  sorted_transactions.csv
python_code/python_code/data/: circular_scheme.csv  circular_scheme2.csv  incoming_data1.csv  outgoing_data.csv
